--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,6 +119,17 @@
     <string name="delete_report_button">delete report button</string>
     <string name="report_type_figure">report Type Figure</string>
     <string name="report_title">Report Title</string>
+    <string name="title_activity_main2">MainActivity2</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="pref_previously_started">previously started</string>
+    <string name="polo_is_not_a_good">Polo Is Not A Good</string>
 
 
 </resources>
