--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,6 +130,7 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="pref_previously_started">previously started</string>
     <string name="polo_is_not_a_good">Polo Is Not A Good</string>
-
+    <string name = "request_manage_file_permission">This App Needs  The Permission To Manage Files.\nGrant  It To Create and Save Report(s)"
+    </string>
 
 </resources>
